# rust-vectore-db

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/tests/: request_test.rs
src/vector_store/: mod.rs  request_util.rs  store.rs
