[package]
name = "vectore_node"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.40"
js-sys = "0.3.67"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde-wasm-bindgen = "0.6.3"
kdtree = "0.7.0"


[dev-dependencies]
wasm-bindgen-test = "0.3.40"


[dependencies.web-sys]
version = "0.3.4"
features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
]


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
